fixes login page logo on small screen

--- a/app/assets/stylesheets/login_page.scss
+++ b/app/assets/stylesheets/login_page.scss
@@ -2,19 +2,24 @@ body {
   background: black;
 }
 .login_page .user_avatar {
-  width: 100%;
-  height: 64px;
+  width: 231px;
+  height: 51px;
   display: inline-block;
   text-align: center;
   border-radius: 1%;
   background-image: image-url("logo.png");
   background-repeat: no-repeat;
   background-color: rgba(0, 0, 0, 0.085);
-  background-position: 50% 1px;
+  background-position: 50% -10px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (-webkit-min-device-pixel-ratio: 192), only screen and (min-resolution: 192dppx), only screen and (min-resolution: 2dppx) {
   .login_page .user_avatar {
-    background-image: image-url("logo.png");
-    background-size: 64px 64px;
+    background-size: 231px 51px;
+  }
+  .md-card .md-card-content.large-padding {
+    .login_heading {
+      margin-left: -24px;
+      margin-right: -24px;
+    }
   }
 }
